[gd_scene load_steps=9 format=2]

[ext_resource path="res://Entities/ScreenTransitor/BossDoor.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Miscellaneous/Door.png" type="Texture" id=2]
[ext_resource path="res://Entities/PlayerAreaNotifier/PlayerAreaNotifier.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "DoorClose"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "DoorOpen"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 32 )

[node name="TransDoor" type="ReferenceRect"]
pause_mode = 2
margin_right = 32.0
margin_bottom = 64.0
rect_min_size = Vector2( 8, 8 )
script = ExtResource( 1 )
direction = 1
transit_duration = Vector2( 1.065, 0.94 )
transit_distance = 56.0
reset_velocity_x = true
reset_velocity_y = true
start_delay = 0.5
finish_delay = 0.5

[node name="AreaNotifier" parent="." instance=ExtResource( 3 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Label" parent="AreaNotifier" index="1"]
custom_colors/font_color = Color( 0, 1, 0.407843, 1 )
text = "TRANSIT"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4, 0 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 4, 0 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "Idle"
anims/DoorClose = SubResource( 1 )
anims/DoorOpen = SubResource( 2 )
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="DoorCloseTimer" type="Timer" parent="."]
one_shot = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 17, 32 )
shape = SubResource( 3 )

[connection signal="transition_activated" from="." to="." method="_on_ScreenTransitor_transition_activated"]
[connection signal="entered_area" from="AreaNotifier" to="." method="_on_AreaNotifier_entered_area"]
[connection signal="timeout" from="DoorCloseTimer" to="." method="_on_DoorCloseTimer_timeout"]

[editable path="AreaNotifier"]
